2013-11-18  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/build.cmake: Remove disabledPlugins.c from list of source
	files.  Remove ${src}/vm from include directories.

	* cmake/Plugins.cmake: Remove handling of disabled plugins.
	Create sqNamedPrims.h from plugins_int once configuration is
	complete.  Copy interp.h from generated source into build dir.

2013-11-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/Plugins.cmake: Look for plugins.{int,ext,exc} in ${bld},
	${config} and then ${src}.  Make parsing of their contents more
	robust.

	* cmake/configure: Fix handling of --src option.

	* cmake/squeak.in: Disable debugging messages.  Run default VM
	with any given args if image check fails.

	* vm/build.cmake: Use ckformat.c from generated sources.

2013-11-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/configure: Default generated source locations are next to
	platforms, under platforms, or under platforms/unix.  Always
	convert generated source path to absolute.  Pass default generated
	source location to cmake via SRC.

	* CMakeLists.txt: Set default generated source location from ${SRC}.

	* cmake/PluginExternal.cmake, cmake/PluginInternal.cmake: Remove
	src/vm/intplugins from source paths.

	* cmake/Plugins.cmake: All (internal and external) generated
	plugin source files are located under {src}/plugins.

	* cmake/Plugins.cmake: Look for plugins.{int,ext,exc} in config
	dir then in generated source dir.

	* cmake/Plugins.cmake: Plugins listed in plugins.exc are removed
	from plugins.int and plugins.ext.

2013-10-20  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/sqUnixMain.c (ioExitWithErrorCode): Added.

	* plugins/SqueakSSL/sqUnixOpenSSL.c: Fix memory leaks (thanks to
	Levente Uzonyl).

2013-09-09  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* cmake/configure (svnversion): Look for evidence of checked out